# vecrs

./: Cargo.toml  README.md
benches/: vec2_bench.rs  vec3_bench.rs
src/: graphics.rs  lib.rs  matrices.rs  trigonometry.rs  vec3ops.rs  vectors.rs
src/vec_ops/: mod.rs  vec2ops.rs  vec3ops.rs  vec4ops.rs
tests/: mat_tests.rs  vec_tests.rs
