[package]
name = "vecrs"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "vec3_bench"
harness = false

[[bench]]
name = "vec2_bench"
harness = false
